<resources>
    <string name="app_name">BikeLife</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Info</string>
    <string name="nav_header_subtitle">Comming soon</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="max_speed">Max Speed</string>
    <string name="ave_speed">Ave Speed</string>
    <string name="move_len">Move Length</string>
    <string name="move_time">Move Time</string>
    <string name="unknown_loc">Unknown location</string>
    <string name="start_play">Begin bicycle riding</string>
    <string name="stop_play">Bicycle stop</string>
    <string name="unit_kph">Km/h</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="comming_soon">Comming soon</string>
    <string name="save_history">Save riding path ...</string>
    <string name="save_history_fail">Fail Save riding path...</string>
    <string name="init_msg">There is an unsaved driving record. Do you want to reset it anyway?</string>
    <string name="ok">OK</string>
    <string name="riding_history">View riding history</string>
    <string name="his_del_msg">If you delete it, you will no longer be able to recover it. \nDo you want to delete your
        riding history?
    </string>
    <string name="bluetooth_not_msg">Your device does not support Bluetooth.</string>
    <string name="bluetooth_connect_msg">connected.</string>
    <string name="cancel">Cancel</string>
    <string name="device_connection">Device connection</string>
    <string name="device_cadence">Cadence &#38; Speed Sensor connect</string>
    <string name="device_connect">Speed sensor connection</string>
    <string name="bluetooth_selection">Device selection</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="cadence">Cadence</string>
    <string name="wheel_size">Wheel Size</string>
    <string name="bike_Information">Bike Information</string>
    <string name="managing">Managing part</string>
    <string name="init">Init</string>
    <string-array name="wheeltypelist">
        <item>25&#8211;622:&#8211;(700x25C):672mm</item>
        <item>23&#8211;622:&#8211;(700x23C):668mm</item>
        <item>20&#8211;622:&#8211;(700x20C):664mm</item>
        <item>18&#8211;622:&#8211;(700x18C):658mm</item>
        <item>28&#8211;622:28x1⅝x1⅜(700x28C):678mm</item>
        <item>32&#8211;622:28x1½x1¾(700x32C):686mm</item>
        <item>25&#8211;559:26x1.0(&#8211;):609mm</item>
        <item>32&#8211;559:26x1.25(&#8211;):623mm</item>
        <item>40&#8211;559:26x1.5(&#8211;):639mm</item>
        <item>47&#8211;559:26x1.75(650x50C):653mm</item>
        <item>50&#8211;559:26x1.9(&#8211;):659mm</item>
        <item>54&#8211;559:26x2.0(&#8211;)::666mm</item>
        <item>57&#8211;559:26x2.3[2.125](&#8211;):673mm</item>
        <item>28&#8211;584:26x1⅛x1½ B(650x28B):640mm</item>
        <item>40&#8211;584:26x1½x1⅜(&#8211;):662mm</item>
        <item>44&#8211;584:26x1½x1⅝(&#8211;):672mm</item>
        <item>37&#8211;590:26x1⅜(650[x35]A):668mm</item>
        <item>32&#8211;597:26x1¼(&#8211;):661mm</item>
        <item>25&#8211;630:27x1⅛(&#8211;):680mm</item>
        <item>32&#8211;630:27x1⅜(&#8211;):694mm</item>
        <item>37&#8211;622:28x1⅝x1⅜(700x37C):696mm</item>
        <item>40&#8211;622:28x1⅝x1½(650x38A):700mm</item>
        <item>47&#8211;622:28x1.75(700x47C):712mm</item>
        <item>38&#8211;635:28x1½(700x38B):714mm</item>
        <item>40&#8211;635:28 15/8(700B):715mm</item>
        <item>62&#8211;203:12x½x2½(320x57):322mm</item>
        <item>47&#8211;305:16x1.75[x2](&#8211;):399mm</item>
        <item>47&#8211;355:18 x1.75[x2](&#8211;):448mm</item>
        <item>28&#8211;406:20x1⅛(&#8211;):462mm</item>
        <item>37&#8211;406:20x1.5(&#8211;):480mm</item>
        <item>47&#8211;406:20x1.75(&#8211;):500mm</item>
        <item>54&#8211;406:20x2.0(&#8211;):514mm</item>
        <item>57&#8211;406:20x2.125(&#8211;):520mm</item>
        <item>54&#8211;428:20x2(&#8211;):536mm</item>
        <item>37&#8211;507:24x1.5(&#8211;):581mm</item>
        <item>47&#8211;507:24x1.75 [x 2](600x50C):601mm</item>
        <item>37&#8211;540:24x1⅜A(600x35A):616mm</item>
        <item>28&#8211;541:&#8211;(600x28A):597mm</item>
        <item>37&#8211;541:&#8211;(600x35A):615mm</item>
        <item>20&#8211;571:26x¾(650x20C):611mm</item>
        <item>23&#8211;571:26x1(650x23C):617mm</item>
        <item>40&#8211;571:&#8211;(650C):651mm</item>
        <!--<item>ETC&#8230;&#8230;&#8230;</item>-->
    </string-array>
    <string name="device_not_connect">Failed to connect speed sensor.</string>
    <string name="device_disconnect">Device disconnected</string>
</resources>
