<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/item_boder"
        android:layout_marginBottom="5dp"
        android:paddingBottom="5dp"
>
    <ImageView
            android:id="@+id/iconType"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/riding_history" />

    <TextView android:id="@+id/bikeId" android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="gone" tools:text="01" tools:ignore="MissingConstraints"/>
    <TextView
            android:id="@+id/bikeName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="17dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iconType"
            app:layout_constraintTop_toTopOf="@+id/iconType"
            tools:text="MyMtb000"/>
    <LinearLayout android:id="@+id/ly00" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal"
                  android:layout_marginTop="7dp"  android:layout_marginBottom="7dp" android:layout_marginStart="17dp" android:layout_marginEnd="7dp"
                  app:layout_constraintTop_toBottomOf="@+id/iconType"
                  app:layout_constraintStart_toStartOf="parent">
        <TextView
                android:id="@+id/wheelSizeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" android:text="@string/wheel_size"
                />
        <Spinner
                android:id="@+id/wheelType"
                android:layout_width="0dp" android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:textSize="20sp"
                tools:text="40-622" />
    </LinearLayout>
    <!--<TextView-->
            <!--android:id="@+id/wheelSize"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="14dp"-->
            <!--android:textSize="18sp"-->
            <!--app:layout_constraintBottom_toBottomOf="@+id/wheelType"-->
            <!--app:layout_constraintStart_toEndOf="@+id/wheelType"-->
            <!--app:layout_constraintTop_toTopOf="@+id/wheelType"-->
            <!--tools:text="622" />-->
    <!--<TextView-->
            <!--android:id="@+id/wheelUnit"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="5dp"-->
            <!--android:textSize="16sp" android:text="mm"-->
            <!--app:layout_constraintBottom_toBottomOf="@+id/wheelSize"-->
            <!--app:layout_constraintStart_toEndOf="@+id/wheelSize"-->
            <!--app:layout_constraintTop_toTopOf="@+id/wheelSize"-->
            <!--tools:ignore="HardcodedText"/>-->

    <LinearLayout android:id="@+id/ly01" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal"
                  android:layout_marginTop="10dp"
                  app:layout_constraintTop_toBottomOf="@+id/ly00"
                  app:layout_constraintStart_toStartOf="parent">
        <TextView android:id="@+id/deviceNameTitle"
                  android:layout_width="0dp" android:layout_weight="1"
                  android:layout_height="match_parent"
                  android:textSize="18sp" android:text="@string/device_cadence"
                  android:layout_marginTop="15dp"
                  android:layout_marginStart="8dp"
                  tools:ignore="MissingConstraints" />
        <ToggleButton android:id="@+id/tbConnectDevice" android:text="@string/init" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <Button android:id="@+id/tbInitDevice" android:text="@string/init" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/ly01"
            tools:text="" tools:ignore="MissingConstraints" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/deviceAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/deviceName"
            app:layout_constraintStart_toEndOf="@+id/deviceName"
            app:layout_constraintTop_toTopOf="@+id/deviceName"
            tools:text=""/>

    <TextView
            android:id="@+id/deviceName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/deviceName"
            tools:text="" tools:ignore="MissingConstraints" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/deviceAddress1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/deviceName1"
            app:layout_constraintStart_toEndOf="@+id/deviceName1"
            app:layout_constraintTop_toTopOf="@+id/deviceName1"
            tools:text=""/>
    <!--<ImageView-->
            <!--android:id="@+id/remove"-->
            <!--android:layout_width="30dp"-->
            <!--android:layout_height="30dp"-->
            <!--android:layout_marginEnd="3dp"-->
            <!--android:layout_marginTop="5dp"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:srcCompat="@android:drawable/ic_menu_delete" />-->

</androidx.constraintlayout.widget.ConstraintLayout>